Refactored api, improved templates

--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -110,7 +110,7 @@
       <button class="dropbtn">&ensp;&ensp;Main &ensp;&ensp;</button>
       <div class="dropdown-content">
         <a href="home"><center>Menu</center></a>
-        <a href="#"><center>Get Premium</center></a>
+        <a href="reports"><center>Reports</center></a>
         <a href="login"><center>Log-in</center></a>
         <a href="#"><center>About</center></a>
 
