--- a/frontend/templates/master.html
+++ b/frontend/templates/master.html
@@ -54,7 +54,7 @@
 <div class=sidebary style="display:inline-block; "> 
     <p>
     <div class="dropdown">
-        <a href="Over"><button class="dropbtn" style=border-radius:10px;> Main </button></a>
+        <a href="login"><button class="dropbtn" style=border-radius:10px;> Main </button></a>
             </div>
 
     <p>
