--- a/frontend/templates/master_home.html
+++ b/frontend/templates/master_home.html
@@ -76,7 +76,7 @@
 <div class=sidebary style="display:inline-block; "> 
     <p>
     <div class="dropdown">
-        <a href="sales"><button class="dropbtn" style=border-radius:10px;> Main </button></a>
+        <a href="login"><button class="dropbtn" style=border-radius:10px;> Main </button></a>
             </div>
         </p>
         <p>
@@ -87,16 +87,6 @@
         <p>
         <div class="dropdown">
             <a href="{{truelayer_link}}"><button class="dropbtn" style=border-radius:10px;>Read Bank Data</button></a>
-                </div>
-                </p>
-                <p>
-        <div class="dropdown">
-            <a href="deals"><button class="dropbtn" style=border-radius:10px;>New Deal </button></a>
-          </div>
-                </p>
-                <p>
-                <div class="dropdown">
-                    <a href="#"><button class="dropbtn" style=border-radius:10px;>New Expense </button></a>
                 </div>
                 </p>
                 <p>
